# LANWeather

./: README.md
androidapp/: settings.gradle
androidapp/app/: build.gradle
androidapp/gradle/wrapper/: gradle-wrapper.properties
arduino/: temp_sensor.ino
flutterapp/: README.md  pubspec.yaml
flutterapp/android/app/: build.gradle
flutterapp/ios/: Podfile
flutterapp/ios/Flutter/: AppFrameworkInfo.plist
flutterapp/ios/Runner/: AppDelegate.swift  Info.plist
flutterapp/ios/Runner.xcodeproj/: project.pbxproj
flutterapp/lib/: main.dart  strings.dart
flutterapp/lib/components/: bottom_navigation_bar_custom.dart  current_weather.dart  day_overview.dart  forecast_overview.dart  forecast_overview_row.dart  hourly_overview.dart  hourly_overview_row.dart
flutterapp/lib/models/: current.dart  current.g.dart  daily.dart  daily.g.dart  period.dart  period.g.dart  sensor.dart  sensor.g.dart  time_frame.dart  time_frame.g.dart  weather.dart  weather.g.dart
flutterapp/web/: index.html  manifest.json
lan-weatherd/: main.cpp  makefile
lanweatherd/: .gitignore  Cargo.toml  lanweatherd.service  main.cpp  main.h  makefile  readme.md  recent_data.cpp  recent_data.h
lanweatherd/src/: lib.rs  main.cpp  main.h  nws_loop.cpp  nws_loop.h  pub_loop.cpp  pub_loop.h  recent_data.cpp  recent_data.h  rep_loop.cpp  rep_loop.h  sensor_loop.cpp  sensor_loop.h
lanweatherd/test_scripts/: req_test.py  sub_test.py
tempsensor/: Adafruit_Si7021.cpp  Adafruit_Si7021.h  COPY_READ_CODE  makefile  sensor_daemon.cpp  si7021.cpp  tempsensor
tempsensord/: makefile  sensor_daemon.cpp
(+76 files in other folders)
