[package]
name = "lanweatherd"
version = "0.1.0"
authors = ["Tom Castle <minifigone@gmail.com>"]
edition = "2018"

[lib]
name = "nws_request"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
json = "*"